# feedback-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  discuss.html  install.sh  llms.txt
.github/workflows/: ci.yml
assets/: discuss-v2.html  mermaid-shim.js
scripts/ralph/: prd.json  progress.txt
skills/discuss/: SKILL.md
src/: assets.rs  cli.rs  diff.rs  error.rs  events.rs  exit.rs  history.rs  lib.rs  main.rs  server.rs  state.rs  template.rs  transcript.rs  update.rs
src/state/: store.rs  types.rs
tasks/: prd-discuss-cli.md
tests/: cli.rs  logging.rs  server.rs
