[package]
name = "discuss"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI for live bidirectional markdown review sessions."
repository = "https://github.com/chrisraethke/discuss-cli"
license = "MIT"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
thiserror = "2.0.18"
