[package]
name = "discuss"
version = "0.3.0"
edition = "2021"
description = "A Rust CLI for live bidirectional markdown review sessions."
repository = "https://github.com/codesoda/discuss-cli"
license = "MIT"

[profile.release]
strip = true
lto = true

[dependencies]
async-stream = "0.3"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
comrak = { version = "0.52.0", default-features = false }
directories = "6"
flate2 = "1.1"
open = "5.3.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
semver = "1.0"
self-replace = "1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
toml = "0.8.23"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
